/**
* @version $Id$
* @package FrontAccounting
* @copyright (C) 2005 - 2011 FrontAccounting, LLC
* @license http://www.gnu.org/copyleft/gpl-3.0.html GNU/GPL
* FrontAccounting is Free Software
*/

1. Changelog
------------
This is a changelog for FrontAccounting All releases.

2014-12-19 Joe                Extended email entries (Geoffrey Walton).
2014-12-17 Joe                Fixed Quote Valid Days in System and GL Setup, Setup tab.
2014-12-09 Janusz Dobrowolski Fixed problems with latin2 encoding due to changes in htmlspecialchars() behaviour in newer php versions.
2014-11-22 Janusz Dobrowolski Further fixes to javascript multiple class handling. (Incomplete yet works for now. Needs further changes in FAMods)
2014-11-21 Janusz Dobrowolski [0002950] Fixed false quantity on hand errors on sales delivery.
2014-11-21 Janusz Dobrowolski Fixed warning during database restore.
2014-11-21 Janusz Dobrowolski Fixed warning about non-existing HTTP_USER_AGENT session variable on some Plesk configurations.
2014-11-19 Joe                Fixed better CSS combobox select.
2014-11-17 Joe                Fixed ECB URLs moved permanently.
2014-11-14 Janusz Dobrowolski Cambell: Javascript now works with multiple classes on elements.
2014-11-07 Joe                Fixed deprecated preg_replace in php >= 5.3.0 with the /e flag in utf8 reports.
2014-10-28 Joe                Improved calculation of standard cost in advanced manufacturing even if qoh = 0.
2014-10-27 Janusz Dobrowolski Fixed 'C' english language display on Install/Update Languages page, to allow its selection on first page.
2014-10-15 Janusz Dobrowolski Restoring compressed sql files sometimes failed due to nasty bug in php gzfile function.
2014-10-08 Janusz Dobrowolski Fixed contact record creation when new customer is added (reference/name were superseded).
2014-10-01 Joe                Improved layout Reports Customer / Supplier Balances.