@@ -1,7 +1,6 @@
 
 2014-12-20 Ap.Muthu           Backup file renaming feature added
 2014-12-18 Ap.Muthu           Added default_quote_valid_days into sys_prefs table to match Sales Quote Inquiry feature addition upstream
-2014-12-11 Ap.Muthu           Removed redundant indexes in Standard Chart of Accounts
 2014-11-22 Ap.Muthu           2014-11-14/22 Cambell/Janusz commit fix: JS multi class names.
 2014-10-11 Ap.Muthu           crm_contacts.entity_id VARCHAR(11) => INT(11)
 2014-10-11 Ap.Muthu           Arabic Fonts for reporting 
